# my-facefusion

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  RELEASE_NOTES_3.7.0-my.1.md  check_cuda.py  debug_context.py  debug_force_download.py  debug_libs.py  debug_output.txt  debug_pre_check.py  debug_refine_cluster.py  debug_traceback.py  docker-compose.yml  faceforge.py  facefusion.ini  facefusion.json  facefusion.py  facefusion.spec  facefusion_diagnostics.json  force_cuda_test.py  install.py  install_desktop.py  launch.py  pyproject.toml  requirements.txt  run_api.py  run_v2.py  stress_test.py  test_argparse.py  test_safe_path.py  test_video_fallback.py  test_video_suite.py  user.ini  verify_cuda_final.py  verify_gpu.py  verify_orchestrator.py  (+1 more)
docs/: UPSTREAM_MERGE.md
facefusion/: __init__.py  api_server.py  app_context.py  args.py  auto_tuner.py  choices.py  conda.py  config.py  content_analyser.py  core.py  diagnostics.py  download.py  execution.py  face_analyser.py  face_clusterer.py  face_detector.py  face_masker.py  face_selector.py  ffmpeg.py  ffmpeg_builder.py  filesystem.py  gui_installer.py  hardware_helper.py  hash_helper.py  inference_manager.py  installer.py  json.py  locales.py  logger.py  program.py  program_helper.py  scene_detector.py  translator.py  types.py  video_manager.py  vision.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
release/: start.sh
tests/: conftest.py  helper.py  test_api_endpoints.py  test_api_face_mapping.py  test_api_init.py  test_api_progress.py  test_audio.py  (+36 more)
(+149 files in other folders)
