[tool.poetry]
name = "my-facefusion"
version = "3.6.1"
description = "Next-generation face manipulation application with decoupled architecture"
authors = ["Yuri Schmaltz <yurischmaltz@gmail.com>"]
readme = "README.md"
packages = [{include = "facefusion"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "2.2.1"
onnx = "1.21.0"
onnxruntime = "1.24.4"
opencv-python = "4.13.0.92"
tqdm = "4.67.3"
scipy = "1.17.1"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
sqlalchemy = "^2.0.28"
celery = "^5.3.6"
redis = "^5.0.3"
python-multipart = "^0.0.9"
gradio = "5.44.1"
gradio-rangeslider = "0.0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
mypy = "^1.9.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
